--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,134 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Weather Radar</title>
-    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="/" />
+
+    <!-- Primary Meta Tags -->
+    <title>Weather Radar</title>
+    <meta name="title" content="Weather Radar" />
+    <meta
+      name="description"
+      content="National and Local Weather Radar, Daily Forecast"
+    />
+    <meta name="copyright" content="Sushant Kumar" />
+    <meta name="author" content="Sushant Kumar" />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Weather Radar" />
+    <meta
+      itemprop="description"
+      content="National and Local Weather Radar, Daily Forecast"
+    />
+    <meta
+      itemprop="image"
+      content="https://weather-radar.sushantk.dev/assets/images/meta-image.png"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weather-radar.sushantk.dev" />
+    <meta property="og:title" content="Weather Radar" />
+    <meta
+      property="og:description"
+      content="National and Local Weather Radar, Daily Forecast"
+    />
+    <meta
+      property="og:image"
+      content="https://weather-radar.sushantk.dev/assets/images/meta-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://weather-radar.sushantk.dev" />
+    <meta property="twitter:title" content="Weather Radar" />
+    <meta
+      property="twitter:description"
+      content="National and Local Weather Radar, Daily Forecast"
+    />
+    <meta
+      property="twitter:image"
+      content="https://weather-radar.sushantk.dev/assets/images/meta-image.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/assets/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/assets/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/assets/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/assets/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/assets/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/assets/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/assets/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-icon-180x180.png"
+    />
     <link
       rel="icon"
-      type="image/x-icon"
-      href="/assets/images/favicon/favicon.ico"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/favicon/android-icon-192x192.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ff5023" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#2488ff" />
   </head>
-  <body>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
